fixed contact me list alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -370,7 +370,7 @@ section ul li {
   justify-content: space-between;
   margin: 10px;
   position: relative;
-  bottom: 60px;
+  bottom: 20px;
 }
 
 #contact-me ul li a {
