--- a/mockup/style.css
+++ b/mockup/style.css
@@ -92,6 +92,7 @@ header nav ul li a {
 }
 
 .second-column {
+  width: 1000px;
   border-left: 2px solid black;
   padding-left: 20px;
 }
